<?xml version="1.0"?>
<package format="2">
    <name>controller_pkg</name>
    <version>0.0.1</version>
    <description>Controller package</description>

    <maintainer email="you@example.com">Fizzer</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
</package>